# aioairtable

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  dev-requirements.txt  justfile  mise.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
aioairtable/: __init__.py  aioairtable.py  helpers.py
src/aioairtable/: __init__.py  _version.py  aioairtable.py  helpers.py  py.typed
tests/: test_aioairtable.py  test_aioairtable_mock.py  test_helpers.py
